--- a/guide/elements/list.html
+++ b/guide/elements/list.html
@@ -100,6 +100,54 @@
         </div>
     </div>
 
+    <div class="g-example-wrap">
+        <div class="g-example-head">
+            <p class="title">Banner Info</p>
+        </div>
+        <div class="g-example-body ">
+            <div class="report-banner">
+                <div class="list">
+                    <h4 class="tit">효성에프엠에스(주)계좌 보고</h4>
+                    <span class="date">2021/06/30</span>
+                </div>
+            </div>
+        </div>
+        <div class="g-example-foot">
+            <pre><code class="html">
+&lt;div class="report-banner">
+    &lt;div class="list">
+        &lt;h4 class="tit">효성에프엠에스(주)계좌 보고&lt;/h4>
+        &lt;span class="date">2021/06/30&lt;/span>
+    &lt;/div>
+&lt;/div>
+            </code></pre>
+        </div>
+    </div>
+
+    <div class="g-example-wrap">
+        <div class="g-example-head">
+            <p class="title">Banner Info</p>
+        </div>
+        <div class="g-example-body ">
+            <div class="report-banner row">
+                <div class="list">
+                    <h4 class="tit dot has-bar">일마감 현황</h4>
+                    <span class="date">2021/06/30</span>
+                </div>
+            </div>
+        </div>
+        <div class="g-example-foot">
+            <pre><code class="html">
+&lt;div class="report-banner row">
+    &lt;div class="list">
+        &lt;h4 class="tit dot has-bar">일마감 현황&lt;/h4>
+        &lt;span class="date">2021/06/30&lt;/span>
+    &lt;/div>
+&lt;/div>
+            </code></pre>
+        </div>
+    </div>
+
 
     <div class="g-example-wrap">
         <div class="g-example-head">
