--- a/guide/elements/tabletitle.html
+++ b/guide/elements/tabletitle.html
@@ -234,6 +234,66 @@
 
     <div class="g-example-wrap">
         <div class="g-example-head">
+            <p class="title">Table Title (small)</p>
+        </div>
+        <div class="g-example-body">
+            <div class="title-box sm">
+                <div class="form-group">
+                    <span class="amount-set">
+                        <span class="amount current">1</span><span class="unit">건</span><span class="dash">/</span>
+                        <span class="amount">26</span><span class="unit">건</span>
+                    </span>
+                    <div class="list-box">
+                        <div class="list">
+                            <span class="label has-bar">총환불예정금액</span>
+                            <span class="desc"><span>5,000</span><span class="unit">원</span></span>
+                        </div>
+                        <div class="list blue">
+                            <span class="label has-bar">지급이체계좌등록금액</span>
+                            <span class="desc"><span>208,926,321</span><span class="unit">원</span></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="form-set">
+                        <button role="button" class="k-button gray-border"><span>지급이체계좌 잔액조회</span></button>
+                        <button role="button" class="k-button gray-border"><span>정산보고서</span></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="g-example-foot">
+            <pre><code class="html">
+&lt;div class="title-box sm">
+    &lt;div class="form-group">
+        &lt;span class="amount-set">
+            &lt;span class="amount current">1&lt;/span>&lt;span class="unit">건&lt;/span>&lt;span class="dash">/&lt;/span>
+            &lt;span class="amount">26&lt;/span>&lt;span class="unit">건&lt;/span>
+        &lt;/span>
+        &lt;div class="list-box">
+            &lt;div class="list">
+                &lt;span class="label has-bar">총환불예정금액&lt;/span>
+                &lt;span class="desc">&lt;span>5,000&lt;/span>&lt;span class="unit">원&lt;/span>&lt;/span>
+            &lt;/div>
+            &lt;div class="list blue">
+                &lt;span class="label has-bar">지급이체계좌등록금액&lt;/span>
+                &lt;span class="desc">&lt;span>208,926,321&lt;/span>&lt;span class="unit">원&lt;/span>&lt;/span>
+            &lt;/div>
+        &lt;/div>
+    &lt;/div>
+    &lt;div class="form-group">
+        &lt;div class="form-set">
+            &lt;button role="button" class="k-button gray-border">&lt;span>지급이체계좌 잔액조회&lt;/span>&lt;/button>
+            &lt;button role="button" class="k-button gray-border">&lt;span>정산보고서&lt;/span>&lt;/button>
+        &lt;/div>
+    &lt;/div>
+&lt;/div>
+            </code></pre>
+        </div>
+    </div>
+
+    <div class="g-example-wrap">
+        <div class="g-example-head">
             <p class="title">Table Title(Popup)</p>
         </div>
         <div class="g-example-body">
