--- a/guide/list.html
+++ b/guide/list.html
@@ -738,7 +738,7 @@
                     <td class="date_start">08-23</td>
                     <td class="date_end">08-23</td>
                     <td class="state" data-state="done"></td>
-                    <td></td>
+                    <td>search 2줄</td>
                 </tr>
                 <tr class="">
                     <td class="d1">03정산</td>
@@ -779,18 +779,18 @@
                     <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">03정산</td>
                     <td class="d2">06정산지급</td>
                     <td class="d3">02정산보고</td>
                     <td class="sbid"><span class="pc">SA030602</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
-                    <td class="ex_start"></td>
-                    <td class="ex_end"></td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
-                    <td>popup(lg)</td>
+                    <td class="ex_start">08-30</td>
+                    <td class="ex_end">08-30</td>
+                    <td class="date_start">08-30</td>
+                    <td class="date_end">08-30</td>
+                    <td class="state" data-state="done"></td>
+                    <td>popup(lg), 푸터 고정</td>
                 </tr>
                 <tr class="">
                     <td class="d1">03정산</td>
@@ -815,7 +815,7 @@
                     <td class="ex_end"></td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="state" data-state="ing"></td>
                     <td>popup(md), 테이블 체크 확인</td>
                 </tr>
                 <tr class="">
@@ -844,18 +844,18 @@
                     <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">03정산</td>
                     <td class="d2">09일마감관리</td>
                     <td class="d3">02상세현황</td>
                     <td class="sbid"><span class="pc">SA030902</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
-                    <td class="ex_start"></td>
-                    <td class="ex_end"></td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
-                    <td>popup(lg)</td>
+                    <td class="ex_start">08-30</td>
+                    <td class="ex_end">08-30</td>
+                    <td class="date_start">08-30</td>
+                    <td class="date_end">08-30</td>
+                    <td class="state" data-state="done"></td>
+                    <td>popup(lg), 내용빌 경우 컬러</td>
                 </tr>
                 <tr class="do">
                     <td class="d1">03정산</td>
@@ -867,7 +867,7 @@
                     <td class="ex_end"></td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="state" data-state="ing"></td>
                     <td>popup(lg)</td>
                 </tr>
                 <tr class="">
@@ -935,131 +935,144 @@
                     <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">04과금</td>
                     <td class="d2">05미납문자전송</td>
                     <td class="d3">01조회</td>
                     <td class="sbid"><span class="pc">SA040501</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
-                    <td class="ex_start"></td>
-                    <td class="ex_end"></td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="ex_start">08-30</td>
+                    <td class="ex_end">08-30</td>
+                    <td class="date_start">08-30</td>
+                    <td class="date_end">08-30</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">04과금</td>
                     <td class="d2">05미납문자전송</td>
                     <td class="d3">02예약발송</td>
                     <td class="sbid"><span class="pc">SA040502</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
-                    <td class="ex_start"></td>
-                    <td class="ex_end"></td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="ex_start">08-30</td>
+                    <td class="ex_end">08-30</td>
+                    <td class="date_start">08-30</td>
+                    <td class="date_end">08-30</td>
+                    <td class="state" data-state="done"></td>
                     <td>popup(sm)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">04과금</td>
                     <td class="d2">06계산서발행</td>
                     <td class="d3">01조회</td>
                     <td class="sbid"><span class="pc">SA040601</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
-                    <td class="ex_start"></td>
-                    <td class="ex_end"></td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="ex_start">08-30</td>
+                    <td class="ex_end">08-30</td>
+                    <td class="date_start">08-30</td>
+                    <td class="date_end">08-30</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">04과금</td>
                     <td class="d2">07계산서조회</td>
                     <td class="d3">01조회</td>
                     <td class="sbid"><span class="pc">SA040701</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
-                    <td class="ex_start"></td>
-                    <td class="ex_end"></td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="ex_start">08-30</td>
+                    <td class="ex_end">08-30</td>
+                    <td class="date_start">08-30</td>
+                    <td class="date_end">08-30</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">04과금</td>
                     <td class="d2">07계산서조회</td>
                     <td class="d3">02수정세금계산서발행</td>
                     <td class="sbid"><span class="pc">SA040702</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
-                    <td class="ex_start"></td>
-                    <td class="ex_end"></td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="ex_start">08-30</td>
+                    <td class="ex_end">08-30</td>
+                    <td class="date_start">08-30</td>
+                    <td class="date_end">08-30</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">05배분</td>
                     <td class="d2">01배분산정</td>
                     <td class="d3">01조회</td>
                     <td class="sbid"><span class="pc">SA050101</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
-                    <td class="ex_start"></td>
-                    <td class="ex_end"></td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="ex_start">08-30</td>
+                    <td class="ex_end">08-30</td>
+                    <td class="date_start">08-30</td>
+                    <td class="date_end">08-30</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">05배분</td>
                     <td class="d2">02협력사배분조회</td>
                     <td class="d3">01조회</td>
                     <td class="sbid"><span class="pc">SA050201</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
-                    <td class="ex_start"></td>
-                    <td class="ex_end"></td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="ex_start">08-30</td>
+                    <td class="ex_end">08-30</td>
+                    <td class="date_start">08-30</td>
+                    <td class="date_end">08-30</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">05배분</td>
                     <td class="d2">03은행수수료</td>
                     <td class="d3">01조회</td>
                     <td class="sbid"><span class="pc">SA050301</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
-                    <td class="ex_start"></td>
-                    <td class="ex_end"></td>
+                    <td class="ex_start">08-31</td>
+                    <td class="ex_end">08-31</td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">05배분</td>
                     <td class="d2">03은행수수료</td>
                     <td class="d3">02수수료이력</td>
                     <td class="sbid"><span class="pc">SA050302</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
-                    <td class="ex_start"></td>
-                    <td class="ex_end"></td>
+                    <td class="ex_start">08-31</td>
+                    <td class="ex_end">08-31</td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
-                    <td>popup(md)</td>
+                    <td>popup(lg)</td>
                 </tr>
-                <tr class="do">
+                <tr class="">
+                    <td class="d1">05배분</td>
+                    <td class="d2">03은행수수료</td>
+                    <td class="d3">03수수료명세서</td>
+                    <td class="sbid"><span class="pc">SA050303</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start">08-31</td>
+                    <td class="ex_end">08-31</td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td>popup(lg)</td>
+                </tr>
+                <tr class="">
                     <td class="d1">05배분</td>
                     <td class="d2">04은행후취수수료관리</td>
                     <td class="d3">01조회</td>
                     <td class="sbid"><span class="pc">SA050401</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
-                    <td class="ex_start"></td>
-                    <td class="ex_end"></td>
+                    <td class="ex_start">08-31</td>
+                    <td class="ex_end">08-31</td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
@@ -1180,7 +1193,7 @@
                     <td class="date_start">07-15</td>
                     <td class="date_end">07-22</td>
                     <td class="state" data-state="done"></td>
-                    <td></td>
+                    <td>divide table</td>
                 </tr>
                 <tr class="">
                     <td class="d1">07서비스품질</td>
